--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,26 +1,27 @@
-[project]
+[tool.poetry]
 name = "scholar-ai"
 version = "0.1.0"
-description = "your ai research assitant, mentor and copilot"
-authors = [
-    {name = "Tasriad Ahmed Tias",email = "trisn.eclipse@gmail.com"}
-]
+description = "your ai research assistant, mentor and copilot"
+authors = ["Tasriad Ahmed Tias <trisn.eclipse@gmail.com>"]
 readme = "README.md"
-requires-python = ">=3.10,<4.0"
-dependencies = [
-    "fastapi (>=0.115.12,<0.116.0)",
-    "uvicorn (>=0.34.2,<0.35.0)",
-    "pydantic (>=2.11.3,<3.0.0)"
-]
+packages = [{include = "app"}]
 
-
-[build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
-build-backend = "poetry.core.masonry.api"
+[tool.poetry.dependencies]
+python = "^3.10"
+fastapi = "^0.115.12"
+uvicorn = "^0.34.2"
+pydantic = "^2.11.3"
+aio-pika = "^9.4.3"
+pika = "^1.3.2"
+python-dotenv = "^1.1.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^25.1.0"
 isort = "^6.0.1"
 flake8 = "^7.2.0"
 pytest = "^8.3.5"
+
+[build-system]
+requires = ["poetry-core>=2.0.0,<3.0.0"]
+build-backend = "poetry.core.masonry.api"
 
