--- a/env.example
+++ b/env.example
@@ -15,6 +15,9 @@ PYTHONPATH=/app
 # GOOGLE_API_KEY=your_google_api_key_here
 # OPENAI_API_KEY=your_openai_api_key_here
 
+# Academic API Configurations
+UNPAYWALL_EMAIL=trisn.eclipse@gmail.com
+
 # CORS Configuration
 ALLOWED_ORIGINS=["http://localhost:3000", "http://127.0.0.1:3000", "http://localhost:8080"]
 
