--- a/env.example
+++ b/env.example
@@ -18,6 +18,11 @@ PYTHONPATH=/app
 # Academic API Configurations
 UNPAYWALL_EMAIL=trisn.eclipse@gmail.com
 
+# Backblaze B2 Configuration
+B2_KEY_ID=your_b2_key_id_here
+B2_APPLICATION_KEY=your_b2_application_key_here
+B2_BUCKET_NAME=scholar-ai-papers
+
 # CORS Configuration
 ALLOWED_ORIGINS=["http://localhost:3000", "http://127.0.0.1:3000", "http://localhost:8080"]
 
