--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,8 @@
 [tool.poetry]
 name = "scholar-ai"
 version = "0.1.0"
-description = "your ai research assistant, mentor and copilot"
-authors = ["Tasriad Ahmed Tias <trisn.eclipse@gmail.com>"]
-readme = "README.md"
-packages = [{include = "app"}]
+description = "ScholarAI Backend System with enhanced WebSearch Agent and B2 integration"
+authors = ["ScholarAI Team"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -24,14 +22,19 @@ pdfplumber = "^0.10.0"
 google-generativeai = "^0.8.3"
 numpy = "^1.24.3"
 pandas = "^2.1.4"
-networkx = "^3.2.1"
-python-dateutil = "^2.8.2"
-tenacity = "^8.2.3"
-ratelimit = "^2.2.1"
-xmltodict = "^0.13.0"
+matplotlib = "^3.8.2"
+seaborn = "^0.12.2"
+plotly = "^5.18.0"
+scikit-learn = "^1.3.2"
+nltk = "^3.8.1"
+spacy = "^3.7.2"
+textblob = "^0.17.1"
+wordcloud = "^1.9.2"
 feedparser = "^6.0.10"
 crossref-commons = "^0.0.7"
 pytest-asyncio = "^1.0.0"
+# Backblaze B2 for PDF storage
+b2sdk = "^2.5.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^25.1.0"
@@ -40,6 +43,6 @@ flake8 = "^7.2.0"
 pytest = "^8.3.5"
 
 [build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
