paper entitiy structure doc added

--- a/.env.example
+++ b/.env.example
@@ -1,55 +1,15 @@
-# Backend-AI Environment Variables
-# This file is used to configure the application settings.
-# Lines starting with # are comments.
+# RabbitMQ
+RABBITMQ_USER=
+RABBITMQ_PASSWORD=
 
-# ------------------------------
-# Search Configuration
-# ------------------------------
-# Number of papers to fetch from each academic source per search round
-# Default: 2
-PAPERS_PER_SOURCE=2
+# Academic API client
+CORE_API_KEY=
+UNPAYWALL_EMAIL=
 
-# Maximum number of search rounds (e.g., initial query + refined queries)
-# Default: 2
-MAX_SEARCH_ROUNDS=2
+# PDF Storage
+B2_KEY_ID= 
+B2_APPLICATION_KEY= 
+B2_BUCKET_NAME= 
 
-# Enable/disable AI-powered query refinement (true/false)
-# Default: true
-ENABLE_AI_REFINEMENT=true
-
-# ------------------------------
-# AI Configuration (Google Gemini)
-# ------------------------------
-# Your Google Gemini API Key for query refinement.
-# Replace YOUR_GEMINI_API_KEY_HERE with your actual key.
-GEMINI_API_KEY="YOUR_GEMINI_API_KEY_HERE"
-
-# ------------------------------
-# RabbitMQ Configuration
-# ------------------------------
-# RabbitMQ server host
-# Default: "localhost"
-RABBITMQ_HOST="localhost"
-
-# RabbitMQ server port
-# Default: 5672
-RABBITMQ_PORT=5672
-
-# RabbitMQ username
-# Default: "scholar"
-RABBITMQ_USER="scholar"
-
-# RabbitMQ password
-# Default: "scholar123"
-RABBITMQ_PASSWORD="scholar123"
-
-# ------------------------------
-# Logging Configuration
-# ------------------------------
-# Set the logging level for the application.
-# Options:
-#   development - Concise output, minimal noise, key events only (default)
-#   production  - Warning level and above, critical events for monitoring
-#   verbose     - Detailed logging for troubleshooting (can also use 'debug')
-# Default: "development"
-LOG_LEVEL="development"
+# Log level
+LOG_LEVEL=
