--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ black = "^25.1.0"
 isort = "^6.0.1"
 flake8 = "^7.2.0"
 pytest = "^8.3.5"
+blis>=0.7.11
 
 [build-system]
 requires = ["poetry-core"]
