--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,52 @@
+# Environment files
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.*
+!*.example
 
-__pycache__
-*.pyc
+# Python cache and compiled files
+__pycache__/
+*.py[cod]
 *.pyo
 *.pyd
 *.pyw
 *.pyz
 *.pywz
 
+# Log files
 *.log
 *.log.*
-*.log.*.*
-*.log.*.*.*
-*.log.*.*.*.*
-*.log.*.*.*.*.*
 
+# Temp files
 *.tmp
 *.tmp.*
-*.tmp.*.*
-*.tmp.*.*.*
-*.tmp.*.*.*.*
+
+# IDE/editor settings
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS-generated files
+.DS_Store
+Thumbs.db
+
+# MyPy and coverage
+.mypy_cache/
+.pytest_cache/
+.coverage
+coverage.xml
+htmlcov/
+
+# Dependency management
+pip-wheel-metadata/
+*.egg-info/
+dist/
+build/
+
+# Optional: ignore SQLite DB files
+*.sqlite3
+*.db
+
+# Optional: if using Docker
+*.pid
+*.sock
