--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,8 @@ crossref-commons = "^0.0.7"
 pytest-asyncio = "^1.0.0"
 # Backblaze B2 for PDF storage
 b2sdk = "^2.5.0"
+# Retry logic
+tenacity = "^8.2.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^25.1.0"
