configured qa+extractor

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,9 @@ crossref-commons = "^0.0.7"
 pytest-asyncio = "^1.0.0"
 # Backblaze B2 for PDF storage
 b2sdk = "^2.5.0"
+# Text extraction dependencies
+pytesseract = "^0.3.10"
+Pillow = "^10.0.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^25.1.0"
