--- a/env.example
+++ b/env.example
@@ -13,3 +13,10 @@ B2_BUCKET_NAME=
 
 # Log level
 LOG_LEVEL=
+
+# Google Gemini API (for gap analysis)
+GEMINI_API_KEY=
+
+# Gap Analysis Configuration
+GAP_ANALYSIS_LIGHT_MODE_MAX_PAPERS=5
+GAP_ANALYSIS_LIGHT_MODE_VALIDATION_THRESHOLD=1
