--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ pydantic = "^2.11.3"
 aio-pika = "^9.4.3"
 pika = "^1.3.2"
 python-dotenv = "^1.1.0"
+# Database Dependencies
+sqlalchemy = "^2.0.0"
+asyncpg = "^0.29.0"
 # Enhanced WebSearch Agent Dependencies
 httpx = "^0.27.0"
 aiohttp = "^3.9.1"
