--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ python-dotenv = "^1.1.0"
 # Database Dependencies
 sqlalchemy = "^2.0.0"
 asyncpg = "^0.29.0"
+psycopg2-binary = "^2.9.0"
 # Enhanced WebSearch Agent Dependencies
 httpx = "^0.27.0"
 aiohttp = "^3.9.1"
