--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,12 @@ pytesseract = "^0.3.10"
 Pillow = "^10.0.0"
 # Retry logic
 tenacity = "^8.2.0"
+ # LangGraph + LangChain
+ langgraph = "^0.2.34"
+ langchain = "^0.3.7"
+ langchain-openai = "^0.2.6"
+ langchain-community = "^0.3.7"
+ sse-starlette = "^2.1.3"
 
 [tool.poetry.group.dev.dependencies]
 black = "^25.1.0"
