--- a/pytest.ini
+++ b/pytest.ini
@@ -3,8 +3,8 @@ testpaths = tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
-addopts = -v --tb=short --strict-markers
-asyncio_default_fixture_loop_scope = function
+addopts = -v --tb=short --strict-markers -k "not test_all_api_clients"
+asyncio_mode = auto
 markers =
     unit: Unit tests
     integration: Integration tests
